ADD_SUBDIRECTORY(common)
IF(UNIX)
  ADD_SUBDIRECTORY(ttcp)
ENDIF(UNIX)
ADD_SUBDIRECTORY(logd)
ADD_SUBDIRECTORY(appmacedon)
ADD_SUBDIRECTORY(filecopy)
ADD_SUBDIRECTORY(dht)
ADD_SUBDIRECTORY(unit_app)

ADD_SUBDIRECTORY(simulator_common)
ADD_SUBDIRECTORY(modelchecker)
ADD_SUBDIRECTORY(simulator)
#ADD_SUBDIRECTORY(parallelmc)

ADD_SUBDIRECTORY(http)
IF(UNIX)
  #ADD_SUBDIRECTORY(notify)
ENDIF(UNIX)
ADD_SUBDIRECTORY(filefind)
IF(CMAKE_PROJECT_NAME STREQUAL "Mace")
  ADD_SUBDIRECTORY(logreader)
ENDIF(CMAKE_PROJECT_NAME STREQUAL "Mace")
